--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "next-auth": "^4.24.11",
     "ox": "^0.4.2",
     "react": "^19.0.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.55",
